--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Siraj Shabbir">
+    <meta name="description" content="This is a simple HTML page">
+    <meta name="keywords" content="HTML, CSS, JavaScript">
     <title>Document</title>
 </head>
 <body>
