--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1>My First Heading</h1>
     <p>My first paragraph.</p>
     <p>One More Paragraph</p>
-    
+    <h1>My Second Heading</h1>
 
 </body>
 </html>
