--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name="description" content="This is a simple HTML page">
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <title>Document</title>
+
+    <link rel="icon" href="icons/web-development.png">
 </head>
 <body>
     
