page title is changed

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Siraj Shabbir">
     <meta name="description" content="This is a simple HTML page">
     <meta name="keywords" content="HTML, CSS, JavaScript">
-    <title>Document</title>
+    <title>Home</title>
 
     <link rel="icon" href="icons/web-development.png">
 </head>
