navigation bar is added

--- a/home.html
+++ b/home.html
@@ -13,6 +13,13 @@
 </head>
 <body>
     
+    <nav>
+        <ul type="none">
+            <li><a href="home.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
 
 </body>
 </html>
