page titles added

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,6 @@
     <link rel="icon" href="icons/web-development.png">
 </head>
 <body>
-    
     <nav>
         <ul type="none">
             <li><a href="index.html">Home</a></li>
@@ -20,6 +19,8 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
+
+    <h1>Contact</h1>
 
 </body>
 </html>
