--- a/Projects/news.html
+++ b/Projects/news.html
@@ -107,6 +107,15 @@
                 quidem quos quibusdam quas necessitatibus. Quisquam, quae. Quisquam voluptates, quae, quod,
                 voluptas quia voluptatem quidem quos quibusdam quas necessitatibus.
             </p>
+            <p>
+                Vel orci porta non pulvinar neque laoreet. Velit euismod in pellentesque massa placerat duis ultricies.
+                Eget nunc scelerisque viverra mauris in aliquam sem fringilla. Nisl rhoncus mattis rhoncus urna neque viverra
+                justo nec. In dictum non consectetur a erat nam at lectus. Dignissim convallis aenean et tortor at risus viverra
+                adipiscing at. Pharetra sit amet aliquam id diam maecenas ultricies mi. Faucibus pulvinar elementum integer enim
+                neque volutpat. Nibh tellus molestie nunc non blandit massa enim nec. Rhoncus aenean vel elit scelerisque mauris.   
+                Fames ac turpis egestas sed tempus urna. Aenean euismod elementum nisi quis eleifend quam adipiscing. Iaculis at erat
+                pellentesque adipiscing commodo elit.
+            </p>
         </article>
 
 
