--- a/Projects/news.html
+++ b/Projects/news.html
@@ -11,9 +11,13 @@
 </head>
 <body>
 
-    <h1 class="paper-title">The News Paper</h1>
+    
 
     <div class="page">
+
+        <header>
+            <h1 class="paper-title">News Paper Layout</h1>
+        </header>
 
         <nav>
             <ul>
@@ -26,7 +30,7 @@
         </nav>
 
         <article class="article1">
-            <h1>Student Learns HTML</h1>
+            <h1 class="article-title">Student Learns HTML</h1>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam illum nesciunt
                 veritatis id excepturi in tempore fugiat incidunt aliquid sit exercitationem aspernatur,
@@ -42,7 +46,7 @@
         </article>
 
         <article class="article2">
-            <h1>BREAKING: Luna is Adorable</h1>
+            <h1 class="article-title">BREAKING: Luna is Adorable</h1>
             <img src="images/dog25.jpg" alt="dog25">
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam illum nesciunt
@@ -55,7 +59,7 @@
         </article>
 
         <article class="article3">
-            <h1>CSS Is Apparently a Thing</h1>
+            <h1 class="article-title">CSS Is Apparently a Thing</h1>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam illum nesciunt
                 veritatis id excepturi in tempore fugiat incidunt aliquid sit exercitationem aspernatur,
@@ -71,7 +75,7 @@
         </article>
 
         <article class="article4">
-            <h1>Between the Angle Brackets: The Brian Holt Scandal</h1>
+            <h1 class="article-title">Between the Angle Brackets: The Brian Holt Scandal</h1>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam illum nesciunt
                 veritatis id excepturi in tempore fugiat incidunt aliquid sit exercitationem aspernatur,
@@ -87,7 +91,7 @@
         </article>
 
         <article class="article5">
-            <h1>Scientist Invents New Miracle Drink: Coffee</h1>
+            <h1 class="article-title">Scientist Invents New Miracle Drink: Coffee</h1>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam illum nesciunt
                 veritatis id excepturi in tempore fugiat incidunt aliquid sit exercitationem aspernatur,
