--- a/Projects/news.html
+++ b/Projects/news.html
@@ -47,7 +47,7 @@
 
         <article class="article2">
             <h1 class="article-title">BREAKING: Luna is Adorable</h1>
-            <img class="article-image" src="images/dog25.jpg" alt="dog25">
+            <img class="article-image" src="http://pets-images.dev-apis.com/pets/dog25.jpg" alt="dog25">
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam illum nesciunt
                 veritatis id excepturi in tempore fugiat.
