--- a/Projects/coffee/index.html
+++ b/Projects/coffee/index.html
@@ -26,7 +26,7 @@
             <div class="item">
                 <span class="quantity">1x</span>
                 <div class="details">
-                    <h3 class="name">Cappucino</h3>
+                    <span class="name">Cappucino</span>
                     <span class="ingredients">Light Foam</span>
                 </div>
                     <span class="price">$6.00</span>
@@ -35,11 +35,9 @@
             <div class="item">
                 <span class="quantity">1x</span>
                 <div class="details">
-                    <h3 class="name">Cappucino</h3>
-                    <span class="ingredients">
-                        Almond Milk <br>
-                        Double Espresso Shot
-                    </span>
+                    <span class="name">Cappucino</span>
+                    <span class="ingredients">Almond Milk </span>
+                    <span class="ingredients"> Double Espresso Shot</span>
                 </div>
                 
                 <span class="price">$7.90</span>
@@ -48,7 +46,7 @@
             <div class="item">
                 <span class="quantity">1x</span>
                 <div class="details">
-                    <h3 class="name">Croissant</h3>
+                    <span class="name">Croissant</span>
                     <span class="ingredients">Butter</span>
                 </div>
                 <span class="price">$5.37</span>
@@ -73,19 +71,20 @@
                 <label for="ccv" class="input-label">CCV Number</label>
                 <input id="ccv" class="input ccv-number" type="text">
             </div>
-            <!-- <div class="input-group">
-                <label for="date" class="input-label">Expiray Date</label>
-                <input id="date" class="input ccv-number" type="text">
-            </div> -->
         </section>
 
-        <div class="price">
+        <div class="price-section">
 
             <div class="labels">
-
+                <span class="label">Subtotal:</span>
+                <span class="label">Tax:</span>
+                <span class="label">Total:</span>
             </div>
-            <div class="prices">
 
+            <div class="prices">
+                <span class="price">$19.27</span>
+                <span class="price">$0.96</span>
+                <span class="price">$20.23</span>
             </div>
 
         </div>
