--- a/Projects/calculator/index.html
+++ b/Projects/calculator/index.html
@@ -8,6 +8,8 @@
     
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="../../icons/calculator.png">
+
+    <link href='https://fonts.googleapis.com/css?family=Autour One' rel='stylesheet'>
 </head>
 <body>
     <h1>Calculator</h1>
