--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <ul>
           <li>
             <h1>
-              <a href="inndex.html">
+              <a href="index.html">
                <span class="fa-solid fa-laptop-code"></span>
                <span>Siraj Shabbir</span>
               </a>
